--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,14 @@
 
 build/
 *.vcxproj*
+
+# CMake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
